--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-dev src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "test:ci": "jest" 
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/node": "^17.0.4",
     "@types/supertest": "^2.0.11",
     "jest": "^27.3.1",
     "mongodb-memory-server": "^8.0.1",
