--- a/expiration/package.json
+++ b/expiration/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/node": "^17.0.4",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7"
   }
