--- a/orders/package.json
+++ b/orders/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/node": "^17.0.4",
     "@types/supertest": "^2.0.11",
     "jest": "^27.3.1",
     "mongodb-memory-server": "^8.0.1",
